# pydata-nbsphinx-pandas-bug-example

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: conf.py  index.rst  test.ipynb
