[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["Clément Pinard <clement.pinard@xxii.fr>"]
packages = [
    {include = "libia"}
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
pandas = "^1.5.1"
Sphinx = "^5.3.0"
pydata-sphinx-theme = {version = "^0.12.0rc1", allow-prereleases = true}
jupyter = "^1.0.0"
nbsphinx = "^0.8.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
